refactor: 코드 일부 수정
전역 예외 클래스 생성,
반환 전용 클래스 생성,
validation 적용

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -43,6 +43,9 @@ dependencies {
 	//security 적용
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
+	//validation 적용
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
 
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
