--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -46,6 +46,9 @@ dependencies {
 	//validation 적용
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+	// JWT 토큰 생성 라이브러리 적용
+	implementation group: 'com.auth0', name: 'java-jwt', version: '3.10.2'
+
 
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
