refactor: 로그인 폼 validation 수정
refactor: 로그인 폼 validation 수정

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -38,7 +38,8 @@ dependencies {
 
 	//querydsl 적용
 	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
-	annotationProcessor "com.querydsl:querydsl-apt:${queryDslVersion}"
+    implementation 'org.jetbrains:annotations:23.0.0'
+    annotationProcessor "com.querydsl:querydsl-apt:${queryDslVersion}"
 
 	//security 적용
 	implementation 'org.springframework.boot:spring-boot-starter-security'
