--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -48,8 +48,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 	// JWT 토큰 생성 라이브러리 적용
-	implementation group: 'com.auth0', name: 'java-jwt', version: '3.10.2'
+//	implementation group: 'com.auth0', name: 'java-jwt', version: '3.10.2'
 
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+	implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
