feat: postService 테스트 코드 개발
개발 중

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -39,6 +39,7 @@ dependencies {
 	//querydsl 적용
 	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
     implementation 'org.jetbrains:annotations:23.0.0'
+    testImplementation 'junit:junit:4.13.1'
     annotationProcessor "com.querydsl:querydsl-apt:${queryDslVersion}"
 
 	//security 적용
