--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -53,10 +53,14 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 
+	// jwt 토큰 생성 라이브러리
 	implementation group: 'com.auth0', name: 'java-jwt', version: '4.2.1'
 
 	//json 변환 (JsonObject)
 	implementation 'org.json:json:20200518'
+
+	// redis 적용
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: '2.4.10'
 
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
