refactor: 코드 복구 및 주석 제거

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -63,6 +63,10 @@ dependencies {
 	// redis 적용
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: '2.4.10'
 
+	//map struct 적용
+	implementation 'org.mapstruct:mapstruct:1.4.2.Final'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
+
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
