--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -24,6 +24,11 @@ spring:
   redis:
     host: localhost
     port: 6379
+
+  servlet:
+    multipart:
+      max-file-size: 50MB
+      max-request-size: 50MB
 logging.level:
   org.hibernate.SQL: debug # 디버그 모드로 sql 출력
 
