refactor: Post-Category-User 의 cascade 제거
Post가 지워질때 부모가 두명이기에 참조 오류가 터짐

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -30,7 +30,7 @@ spring:
       max-file-size: 50MB
       max-request-size: 50MB
 logging.level:
-  org.hibernate.SQL: debug # 디버그 모드로 sql 출력
+  org.hibernate.SQL: trace # 디버그 모드로 sql 출력
 
 file:
   dir: C:/Users/김진수/link-library/
