--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -7,15 +7,20 @@ spring:
 
   main:
     allow-circular-references: true
+#  datasource:
+#    url: jdbc:h2:tcp://localhost/~/link-library
+#    username: sa
+#    password:
+#    driver-class-name: org.h2.Driver
   datasource:
-    url: jdbc:h2:tcp://localhost/~/link-library
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://link-library-db.coz9al7ljo0h.ap-northeast-2.rds.amazonaws.com:3306/link_library_db?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    username: admin
+    password: linklibrary2023
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
         format_sql: true # sql 문 포맷
