feat: redis hos aws엔드포인트로 변경

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -27,7 +27,7 @@ spring:
         default_batch_fetch_size: 100  # batch size 설정
 
   redis:
-    host: localhost
+    host: link-library-inmemory-001.qjkuoz.0001.apn2.cache.amazonaws.com:6379
     port: 6379
 
   servlet:
