feat: aws s3 버킷 적용

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -70,6 +70,9 @@ dependencies {
 	//mysql 설정
 	runtimeOnly 'com.mysql:mysql-connector-j'
 
+	//aws s3 의존성 추가
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
 	compileOnly 'org.projectlombok:lombok'
 //	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
@@ -98,3 +101,8 @@ compileQuerydsl {
 }
 // querydsl 세팅 끝
 
+
+//jar build 시 오류 해결
+test.onlyIf {
+	!project.hasProperty('test')
+}
